--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "<4.0.0.0,>=3.0"
+django = ">=4.0,<5.0.0.0"
 django-bootstrap4 = "*"
 django-cleanup = "*"
 django-jsonify = "*"
@@ -15,7 +15,7 @@ django-phone-field = "*"
 django-mptt = "*"
 django-view-breadcrumbs = "*"
 django-extensions = "*"
-psycopg2 ="<3.0.0.0,>=2.7.0.0"
+psycopg2 ="*"
 whitenoise = "*"
 pillow = "*"
 legacy-cgi = "*"
